# 3dviewer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  shaders.qrc  vcpkg.json
shaders/: phong.fs  phong.vs
src/: Camera.cpp  Camera.h  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  main.cpp
